--- a/README.adoc
+++ b/README.adoc
@@ -24,41 +24,50 @@ The following are the four major components of this repository.
 |link:functions/supplier/file-supplier/README.adoc[File]
 |link:functions/consumer/cassandra-consumer/README.adoc[Cassandra]
 |link:functions/function/filter-function/README.adoc[Filter]
-|link:functions/supplier/http-supplier/README.adoc[HTTP]
+|link:functions/supplier/ftp-supplier/README.adoc[FTP]
 |link:functions/consumer/counter-consumer/README.adoc[Counter]
 |link:functions/function/header-enricher-function/README.adoc[Header-Enricher]
-|link:functions/supplier/jdbc-supplier/README.adoc[JDBC]
+|link:functions/supplier/geode-supplier/README.adoc[Geode]
 |link:functions/consumer/file-consumer/README.adoc[File]
 |link:functions/function/http-request-function/README.adoc[HTTP Request]
-|link:functions/supplier/geode-supplier/README.adoc[Geode]
-|link:functions/consumer/geode-consumer/README.adoc[Geode]
-|
-|link:functions/supplier/mongodb-supplier/README.adoc[MongoDB]
+|link:functions/supplier/http-supplier/README.adoc[HTTP]
 |link:functions/consumer/ftp-consumer/README.adoc[FTP]
+|
+|link:functions/supplier/jdbc-supplier/README.adoc[JDBC]
+|link:functions/consumer/geode-consumer/README.adoc[Geode]
 |link:functions/function/spel-function/README.adoc[SpEL]
-|link:functions/supplier/mqtt-supplier/README.adoc[MQTT]
+|link:functions/supplier/jms-supplier/README.adoc[JMS]
 |link:functions/consumer/jdbc-consumer/README.adoc[JDBC]
 |link:functions/function/splitter-function/README.adoc[Splitter]
-|link:functions/supplier/tcp-supplier/README.adoc[TCP]
+|link:functions/supplier/mongodb-supplier/README.adoc[MongoDB]
 |link:functions/consumer/log-consumer/README.adoc[Log]
-|
-|link:functions/supplier/time-supplier/README.adoc[Time]
+|link:functions/function/task-launch-request-function/README.adoc[Task Launch Request]
+|link:functions/supplier/mqtt-supplier/README.adoc[MQTT]
 |link:functions/consumer/mongodb-consumer/README.adoc[MongoDB]
-|
-|
+|link:functions/function/tasklauncher-function/README.adoc[Task Launcher]
+|link:functions/supplier/rabbit-supplier/README.adoc[RabbitMQ]
 |link:functions/consumer/mqtt-consumer/README.adoc[MQTT]
+|link:functions/function/twitter-function/README.adoc[Twitter]
+|link:functions/supplier/s3-supplier/README.adoc[AWS S3]
+|link:functions/consumer/rabbit-consumer/README.adoc[RabbitMQ]
 |
-|
-|link:functions/consumer/rabbit-consumer/README.adoc[Rabbit]
-|
-|
+|link:functions/supplier/tcp-supplier/README.adoc[TCP]
 |link:functions/consumer/redis-consumer/README.adoc[Redis]
 |
+|link:functions/supplier/time-supplier/README.adoc[Time]
+|link:functions/consumer/s3-consumer/README.adoc[AWS S3]
 |
+|link:functions/supplier/twitter-supplier/README.adoc[Twitter]
 |link:functions/consumer/sftp-consumer/README.adoc[SFTP]
 |
-|
+|link:functions/supplier/websocket-supplier/README.adoc[Websocket]
 |link:functions/consumer/tcp-consumer/README.adoc[TCP]
+|
+|
+|link:functions/consumer/twitter-consumer/README.adoc[Twitter]
+|
+|
+|link:functions/consumer/websocket-consumer/README.adoc[Websocker]
 |
 |===
 
@@ -70,48 +79,56 @@ The following are the four major components of this repository.
 |link:applications/source/file-source/README.adoc[File]
 |link:applications/sink/cassandra-sink/README.adoc[Cassandra]
 |link:applications/processor/bridge-processor/README.adoc[Bridge]
-|link:applications/source/geode-source/README.adoc[Geode]
+|link:applications/source/ftp-source/README.adoc[FTP]
 |link:applications/sink/counter-sink/README.adoc[Counter]
 |link:applications/processor/filter-processor/README.adoc[Filter]
-|link:applications/source/http-source/README.adoc[HTTP]
+|link:applications/source/geode-source/README.adoc[Geode]
 |link:applications/sink/file-sink/README.adoc[Fiile]
 |link:applications/processor/groovy-processor/README.adoc[Groovy]
-|link:applications/source/jdbc-source/README.adoc[JDBC]
+|link:applications/source/http-source/README.adoc[HTTP]
 |link:applications/sink/ftp-sink/README.adoc[FTP]
 |link:applications/processor/header-enricher-processor/README.adoc[Header-Enricher]
-|link:applications/source/load-generator-source/README.adoc[Load-Generator]
+|link:applications/source/jdbc-source/README.adoc[JDBC]
 |link:applications/sink/geode-sink/README.adoc[Geode]
 |link:applications/processor/http-request-processor/README.adoc[HTTP Request]
-|link:applications/source/mongodb-source/README.adoc[MongoDB]
+|link:applications/source/jms-source/README.adoc[JMS]
 |link:applications/sink/jdbc-sink/README.adoc[JDBC]
 |link:applications/processor/script-processor/README.adoc[Script]
-|link:applications/source/mqtt-source/README.adoc[MQTT]
+|link:applications/source/load-generator-source/README.adoc[Load-Generator]
 |link:applications/sink/log-sink/README.adoc[Log]
 |link:applications/processor/splitter-processor/README.adoc[Splitter]
-|link:applications/source/rabbit-source/README.adoc[Rabbit]
+|link:applications/source/mongodb-source/README.adoc[MongoDB]
 |link:applications/sink/mongodb-sink/README.adoc[MongoDB]
 |link:applications/processor/transform-processor/README.adoc[Transform]
-|link:applications/source/tcp-source/README.adoc[TCP]
+|link:applications/source/mqtt-source/README.adoc[MQTT]
 |link:applications/sink/mqtt-sink/README.adoc[MQTT]
+|link:applications/processor/twitter-trend-processor/README.adoc[Twitter Trend]
+|link:applications/source/rabbit-source/README.adoc[RabbitMQ]
+|link:applications/sink/rabbit-sink/README.adoc[RabbitMQ]
 |
-|link:applications/source/time-source/README.adoc[Time]
-|link:applications/sink/rabbit-sink/README.adoc[Rabbit]
-|
-|
+|link:applications/source/s3-source/README.adoc[AWS S3]
 |link:applications/sink/redis-sink/README.adoc[Redis]
 |
-|
+|link:applications/source/tcp-source/README.adoc[TCP]
 |link:applications/sink/router-sink/README.adoc[Router]
 |
-|
+|link:applications/source/time-source/README.adoc[Time]
 |link:applications/sink/sftp-sink/README.adoc[SFTP]
 |
+|link:applications/source/twitter-message-source/README.adoc[Twitter Message]
+|link:applications/sink/tasklauncher-sink/README.adoc[Task Launcher]
 |
+|link:applications/source/twitter-search-source/README.adoc[Twitter Search]
 |link:applications/sink/tcp-sink/README.adoc[TCP]
 |
-|
+|link:applications/source/twitter-stream-source/README.adoc[Twitter Stream]
 |link:applications/sink/throughput-sink/README.adoc[Throughput]
 |
+|link:applications/source/websocket-source/README.adoc[Websocket]
+|link:applications/sink/twitter-message-sink/README.adoc[Twitter Message]
+|
+|
+|link:applications/sink/twitter-update-sink/README.adoc[Twitter Update]
 |
 |===
 
