--- a/functions/function/twitter-function/README.adoc
+++ b/functions/function/twitter-function/README.adoc
@@ -19,7 +19,7 @@ You can import the `TwitterTrendFunctionConfiguration` in a Spring Boot applicat
 
 `filterFunction`
 
-You can use `Function<Message<?>, Message<byte[]>> trendOrTrendLocationsFunction` as a qualifier when injecting.
+You can use `Function<Message<?>, Message<byte[]>> twitterTrendFunction` as a qualifier when injecting.
 
 Once injected, you can use the `apply` method of the `Function` to invoke it and get the result.
 
